<?xml version="1.0"?>
<package format="2">
  <name>prediction_to_teb</name>
  <version>0.0.1</version>
  <description>Adapters and test publishers for sending predicted obstacles to TEB.</description>

  <maintainer email="allgo@todo.todo">allgo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_converter</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
</package>
